--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="bot-avatar">
         <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" alt="AI Avatar">
       </div>
-      <h1 id="ai-header">AI NYA</h1> <!-- Tambahkan ID ke elemen ini -->
+      <h1 id="ai-header">AI Asisten</h1> <!-- Tambahkan ID ke elemen ini -->
     </div>
     <div id="typing-indicator" class="typing-indicator"> Asisten sedang mengetik...</div>
     <div class="chat-messages" id="chat-messages"></div>
