--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MIMIN GABUT 🚸</title>
-  <link rel="icon" href="https://raw.githubusercontent.com/prayogak/prayogak.github.io/refs/heads/main/154754086.jpg" type="image/png">
+  <title>ChatGPT</title>
+  <link rel="icon" href="https://raw.githubusercontent.com/prayogak/prayogak.github.io/refs/heads/main/pictureme/mtgDfoGiiAtsgrc.jpg" type="image/png">
   <style>
     * {
       box-sizing: border-box;
