--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ChatGPT</title>
   <link rel="icon" href="https://raw.githubusercontent.com/prayogak/prayogak.github.io/refs/heads/main/pictureme/mtgDfoGiiAtsgrc.jpg" type="image/png">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1811586010937090" crossorigin="anonymous"></script>
   <script async src="https://ss.mrmnd.com/dynamic.js" data-mnddynid="3bb75563-6e5b-4058-8227-c7d24b2f8a45"></script>
   <style>
     * {
