--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-adsense-account" content="ca-pub-1811586010937090">
-  <link rel="icon" href="https://raw.githubusercontent.com/prayogak/prayogak.github.io/refs/heads/main/pictureme/mtgDfoGiiAtsgrc.jpg" type="image/png">
+  <link rel="icon" href="https://avatars.githubusercontent.com/u/154754086?v=4" type="image/png">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1811586010937090" crossorigin="anonymous"></script>
   <script async src="https://ss.mrmnd.com/dynamic.js" data-mnddynid="3bb75563-6e5b-4058-8227-c7d24b2f8a45"></script>
   <style>
