--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
   </div>
   
   <!-- Copyright dengan animasi -->
-  <div class="copyright">&copy; AI Asisten</div>
+  <div class="copyright">
+  &copy; <a href="https://github.com/prayogak"YOGAK</a>
+</div>
 
   <script>
     const messageInput = document.getElementById('message-input');
