--- a/index.html
+++ b/index.html
@@ -153,10 +153,9 @@
     </div>
   </div>
   
-  <!-- Copyright dengan animasi -->
   <div class="copyright">
-  &copy; <a href="https://github.com/prayogak"YOGAK</a>
-</div>
+    &copy; <a href="https://github.com/prayogak">YOGAK</a>
+  </div>
 
   <script>
     const messageInput = document.getElementById('message-input');
