--- a/PesanBuatmu.html
+++ b/PesanBuatmu.html
@@ -1,18 +1,7 @@
 <html><meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/><meta content='IE=edge' http-equiv='X-UA-Compatible'/>
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet"><script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
-<!--<link href="https://drive.google.com/uc?export=view&id=" rel="stylesheet" type="text/css" /><script src="https://sesibuk.feeldream.repl.co/script.js"></script>-->
 <head>
 <title>Script HTML</title>
-<!-- 
-  Made with love by Rayys!
-
-     Blog: https://PalingIT.com
-     Instagram: @rayyarrr
-     TikTok: @rayy4r
-     Email: rayyar0703@gmail.com
-
-  Thanks to all <3
--->
 </head>
 <!-- Edit Wallpaper 
 di background-image URL --><style>
@@ -25,7 +14,7 @@ di background-image URL --><style>
 }
 @keyframes fanim {0% {background-position: 0% 0%;}25% {background-position: 100% 100%;} 50% {background-position: 0% 100%;} 75% {background-position: 50% 50%;} 100% {background-position: 0% 0%;}}
 body{background-color:#101010;font-family:var(--gaya-font);padding: 25px;-webkit-user-select: none; -ms-user-select: none; user-select: none;} a{text-decoration:none;}
-body::before{content:"\00A9  Script HTML Bucin";color:white;opacity:.3;font-size:2vw;position:fixed;bottom:25px;left:25px;z-index:2}
+body::before{content:"\00A9  YOGAK ID";color:white;opacity:.3;font-size:2vw;position:fixed;bottom:25px;left:25px;z-index:2}
 #bodyblur{display:block;position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,.4);-webkit-backdrop-filter:blur(2px); backdrop-filter:blur(2px);transition:all 1s ease;}
 #bodyblur img{opacity:.6}
 
@@ -94,7 +83,7 @@ p{color:var(--warna-teks);font-size:15px;font-weight:700;line-height:1.4em;margi
    <div id='Content'>
    	
      <div id="suratin" onClick="memulai()">
-       <!-- Surat --><img src="https://rayyscoding.github.io/envelope.png"/>
+       <!-- Surat --><img src="https://prayogak.github.io/envelope.png"/>
      </div>
      <p id="ket">Klik Suratnya!</p>
    
